// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardContainer online logged in renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DragDropContext(DashboardContainer)>
    <DashboardContainer>
      <Dashboard
        disabled={true}
        onArtistSearch={[Function]}
        onDrop={[Function]}
        onNext={[Function]}
        onPause={[Function]}
        onPlay={[Function]}
        onPrevious={[Function]}
        onRemoveTrack={[Function]}
        onSearchClick={[Function]}
        onStop={[Function]}
        onTracklistClear={[Function]}
        onVolumeChange={[Function]}
        online={true}
        tracklist={Array []}
      >
        <DimmerDimmable
          blurring={true}
          dimmed={false}
        >
          <div
            className="blurring dimmable"
          >
            <DragInTrack
              disabled={true}
              onDrop={[Function]}
            >
              <SearchContainer>
                <Search
                  curatedList={Array []}
                  onAddTrack={[Function]}
                  onAddTrackToMix={[Function]}
                  onAddTracks={[Function]}
                  onClose={[Function]}
                  onPageChange={[Function]}
                  onQueryChange={[Function]}
                  onRemoveFromMix={[Function]}
                  onSubmit={[Function]}
                  onSwapTracks={[Function]}
                  results={Array []}
                  totalPages={NaN}
                  visible={false}
                >
                  <SidebarPushable>
                    <div
                      className="pushable"
                    >
                      <Sidebar
                        animation="overlay"
                        className="sidebar-search"
                        direction="right"
                        icon="labeled"
                        inverted="true"
                        onShow={[Function]}
                        target={
                          Object {
                            "current": Document {
                              "location": Location {
                                "assign": [Function],
                                "hash": "",
                                "host": "localhost",
                                "hostname": "localhost",
                                "href": "http://localhost/",
                                "origin": "http://localhost",
                                "pathname": "/",
                                "port": "",
                                "protocol": "http:",
                                "reload": [Function],
                                "replace": [Function],
                                "search": "",
                                "toString": [Function],
                              },
                            },
                          }
                        }
                        vertical="true"
                        visible={false}
                        width="very wide"
                      >
                        <Ref
                          innerRef={
                            Object {
                              "current": <div
                                class="ui overlay right very wide sidebar sidebar-search"
                                icon="labeled"
                                inverted="true"
                                vertical="true"
                              >
                                <form
                                  class="ui inverted form"
                                >
                                  <div
                                    class="field"
                                  >
                                    <label>
                                      SEARCH
                                    </label>
                                    <input
                                      aria-label="search-input"
                                      placeholder="track, artist or album"
                                      value=""
                                    />
                                  </div>
                                  <button
                                    class="ui fluid button"
                                    type="submit"
                                  >
                                    Find
                                  </button>
                                </form>
                                <div
                                  class="ui horizontal divider"
                                >
                                  <h4
                                    class="ui inverted header"
                                  >
                                    Results
                                  </h4>
                                </div>
                                <div
                                  class="ui tiny divided inverted relaxed list"
                                  role="list"
                                />
                              </div>,
                            }
                          }
                        >
                          <RefFindNode
                            innerRef={
                              Object {
                                "current": <div
                                  class="ui overlay right very wide sidebar sidebar-search"
                                  icon="labeled"
                                  inverted="true"
                                  vertical="true"
                                >
                                  <form
                                    class="ui inverted form"
                                  >
                                    <div
                                      class="field"
                                    >
                                      <label>
                                        SEARCH
                                      </label>
                                      <input
                                        aria-label="search-input"
                                        placeholder="track, artist or album"
                                        value=""
                                      />
                                    </div>
                                    <button
                                      class="ui fluid button"
                                      type="submit"
                                    >
                                      Find
                                    </button>
                                  </form>
                                  <div
                                    class="ui horizontal divider"
                                  >
                                    <h4
                                      class="ui inverted header"
                                    >
                                      Results
                                    </h4>
                                  </div>
                                  <div
                                    class="ui tiny divided inverted relaxed list"
                                    role="list"
                                  />
                                </div>,
                              }
                            }
                          >
                            <div
                              className="ui overlay right very wide sidebar sidebar-search"
                              icon="labeled"
                              inverted="true"
                              vertical="true"
                            >
                              <YourMix
                                onAddTracks={[Function]}
                                onRemoveFromMix={[Function]}
                                onSwapTracks={[Function]}
                                tracks={Array []}
                              />
                              <Form
                                as="form"
                                inverted={true}
                                onSubmit={[Function]}
                              >
                                <form
                                  className="ui inverted form"
                                  onSubmit={[Function]}
                                >
                                  <FormField>
                                    <div
                                      className="field"
                                    >
                                      <label>
                                        SEARCH
                                      </label>
                                      <input
                                        aria-label="search-input"
                                        onChange={[Function]}
                                        placeholder="track, artist or album"
                                      />
                                    </div>
                                  </FormField>
                                  <Button
                                    as="button"
                                    fluid={true}
                                    type="submit"
                                  >
                                    <Ref
                                      innerRef={
                                        Object {
                                          "current": <button
                                            class="ui fluid button"
                                            type="submit"
                                          >
                                            Find
                                          </button>,
                                        }
                                      }
                                    >
                                      <RefFindNode
                                        innerRef={
                                          Object {
                                            "current": <button
                                              class="ui fluid button"
                                              type="submit"
                                            >
                                              Find
                                            </button>,
                                          }
                                        }
                                      >
                                        <button
                                          className="ui fluid button"
                                          onClick={[Function]}
                                          type="submit"
                                        >
                                          Find
                                        </button>
                                      </RefFindNode>
                                    </Ref>
                                  </Button>
                                </form>
                              </Form>
                              <Divider
                                horizontal={true}
                              >
                                <div
                                  className="ui horizontal divider"
                                >
                                  <Header
                                    as="h4"
                                    inverted={true}
                                  >
                                    <h4
                                      className="ui inverted header"
                                    >
                                      Results
                                    </h4>
                                  </Header>
                                </div>
                              </Divider>
                              <List
                                divided={true}
                                inverted={true}
                                relaxed={true}
                                size="tiny"
                              >
                                <div
                                  className="ui tiny divided inverted relaxed list"
                                  role="list"
                                >
                                  <SearchItems
                                    onAdd={[Function]}
                                    onClick={[Function]}
                                    tracks={Array []}
                                  />
                                </div>
                              </List>
                            </div>
                          </RefFindNode>
                        </Ref>
                      </Sidebar>
                      <SidebarPusher
                        dimmed={false}
                        onClick={null}
                      >
                        <div
                          className="pusher"
                          onClick={null}
                        >
                          <div
                            className="c-header"
                          >
                            <Controls
                              disabled={true}
                              onNext={[Function]}
                              onPause={[Function]}
                              onPlay={[Function]}
                              onPrevious={[Function]}
                              onStop={[Function]}
                            >
                              <span
                                className="c-controls"
                              >
                                <SkipButtons
                                  disabled={true}
                                  onNext={[Function]}
                                  onPrevious={[Function]}
                                >
                                  <PreviousButton
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="step backward"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="step backward icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </PreviousButton>
                                  <NextButton
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="step forward"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="step forward icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </NextButton>
                                </SkipButtons>
                                <PlayButton
                                  disabled={true}
                                  onClick={[Function]}
                                  state="playing"
                                >
                                  <button
                                    className="c-button c-button--disabled c-button--active"
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <Icon
                                      as="i"
                                      name="play"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="play icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </button>
                                </PlayButton>
                                <PauseButton
                                  disabled={true}
                                  onClick={[Function]}
                                  state="playing"
                                >
                                  <button
                                    className="c-button c-button--disabled"
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <Icon
                                      as="i"
                                      name="pause"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="pause icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </button>
                                </PauseButton>
                                <StopButton
                                  disabled={true}
                                  onClick={[Function]}
                                  state="playing"
                                >
                                  <button
                                    className="c-button c-button--disabled"
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <Icon
                                      as="i"
                                      name="stop"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="stop icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </button>
                                </StopButton>
                              </span>
                            </Controls>
                            <div
                              className="c-header__actions"
                            >
                              <SearchButton
                                disabled={true}
                                onClick={[Function]}
                              >
                                <Button
                                  animated="vertical"
                                  as="button"
                                  disabled={true}
                                  floated="right"
                                  onClick={[Function]}
                                >
                                  <Ref
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui vertical animated disabled right floated button"
                                          disabled=""
                                          tabindex="-1"
                                        >
                                          <div
                                            class="hidden content"
                                          >
                                            Search
                                          </div>
                                          <div
                                            class="visible content"
                                          >
                                            <i
                                              aria-hidden="true"
                                              class="search icon"
                                            />
                                          </div>
                                        </button>,
                                      }
                                    }
                                  >
                                    <RefFindNode
                                      innerRef={
                                        Object {
                                          "current": <button
                                            class="ui vertical animated disabled right floated button"
                                            disabled=""
                                            tabindex="-1"
                                          >
                                            <div
                                              class="hidden content"
                                            >
                                              Search
                                            </div>
                                            <div
                                              class="visible content"
                                            >
                                              <i
                                                aria-hidden="true"
                                                class="search icon"
                                              />
                                            </div>
                                          </button>,
                                        }
                                      }
                                    >
                                      <button
                                        className="ui vertical animated disabled right floated button"
                                        disabled={true}
                                        onClick={[Function]}
                                        tabIndex={-1}
                                      >
                                        <ButtonContent
                                          hidden={true}
                                        >
                                          <div
                                            className="hidden content"
                                          >
                                            Search
                                          </div>
                                        </ButtonContent>
                                        <ButtonContent
                                          visible={true}
                                        >
                                          <div
                                            className="visible content"
                                          >
                                            <Icon
                                              as="i"
                                              name="search"
                                            >
                                              <i
                                                aria-hidden="true"
                                                className="search icon"
                                                onClick={[Function]}
                                              />
                                            </Icon>
                                          </div>
                                        </ButtonContent>
                                      </button>
                                    </RefFindNode>
                                  </Ref>
                                </Button>
                              </SearchButton>
                              <VolumeButtons
                                disabled={true}
                                onVolumeChange={[Function]}
                              >
                                <div
                                  className="c-volumeControls"
                                >
                                  <VolumeDownButton
                                    disabled={true}
                                    onChange={[Function]}
                                    volume={25}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="volume down"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="volume down icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </VolumeDownButton>
                                  <VolumeUpButton
                                    disabled={true}
                                    onChange={[Function]}
                                    volume={25}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="volume up"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="volume up icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </VolumeUpButton>
                                  <div
                                    className="c-volumeControls__indicator"
                                  >
                                    25
                                  </div>
                                </div>
                              </VolumeButtons>
                              <Settings>
                                <button
                                  className="c-button c-button--image"
                                  onClick={[Function]}
                                >
                                  <img
                                    alt="Fred Spanner"
                                    src="myImage123"
                                    title="Fred Spanner"
                                  />
                                </button>
                              </Settings>
                            </div>
                          </div>
                          <div
                            className="c-main"
                          >
                            <div
                              className="c-main__nowPlaying"
                            >
                              <CurrentTrackContainer>
                                <CurrentTrack
                                  onVote={[Function]}
                                >
                                  <div
                                    className="c-nowPlaying"
                                  >
                                    <div>
                                      <img
                                        alt="Kyan Limited Edition Collectors Vinyl"
                                        className="c-nowPlaying__image"
                                        src="default-artwork.png"
                                      />
                                      <div
                                        className="c-nowPlaying__trackInfo"
                                      >
                                        <h6>
                                          Now playing
                                        </h6>
                                        <h4>
                                          -
                                        </h4>
                                        <p>
                                          Drag some music here or press play.
                                        </p>
                                      </div>
                                    </div>
                                  </div>
                                </CurrentTrack>
                              </CurrentTrackContainer>
                            </div>
                            <div
                              className="c-main__trackList"
                            >
                              <h6>
                                Tracklist 
                                <ClearPlaylist
                                  disabled={true}
                                  onClear={[Function]}
                                />
                              </h6>
                              <Tracklist
                                disabled={true}
                                onArtistSearch={[Function]}
                                onRemoveTrack={[Function]}
                                tracks={Array []}
                              >
                                <div
                                  className="c-tracklist"
                                >
                                  <ListItems
                                    disabled={true}
                                    onArtistSearch={[Function]}
                                    onRemove={[Function]}
                                    tracks={Array []}
                                  />
                                </div>
                              </Tracklist>
                            </div>
                          </div>
                        </div>
                      </SidebarPusher>
                    </div>
                  </SidebarPushable>
                </Search>
              </SearchContainer>
            </DragInTrack>
          </div>
        </DimmerDimmable>
      </Dashboard>
    </DashboardContainer>
  </DragDropContext(DashboardContainer)>
</Provider>
`;

exports[`DashboardContainer online logged out renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DragDropContext(DashboardContainer)>
    <DashboardContainer>
      <Dashboard
        disabled={true}
        onArtistSearch={[Function]}
        onDrop={[Function]}
        onNext={[Function]}
        onPause={[Function]}
        onPlay={[Function]}
        onPrevious={[Function]}
        onRemoveTrack={[Function]}
        onSearchClick={[Function]}
        onStop={[Function]}
        onTracklistClear={[Function]}
        onVolumeChange={[Function]}
        online={true}
        tracklist={Array []}
      >
        <DimmerDimmable
          blurring={true}
          dimmed={false}
        >
          <div
            className="blurring dimmable"
          >
            <DragInTrack
              disabled={true}
              onDrop={[Function]}
            >
              <SearchContainer>
                <Search
                  curatedList={Array []}
                  onAddTrack={[Function]}
                  onAddTrackToMix={[Function]}
                  onAddTracks={[Function]}
                  onClose={[Function]}
                  onPageChange={[Function]}
                  onQueryChange={[Function]}
                  onRemoveFromMix={[Function]}
                  onSubmit={[Function]}
                  onSwapTracks={[Function]}
                  results={Array []}
                  totalPages={NaN}
                  visible={false}
                >
                  <SidebarPushable>
                    <div
                      className="pushable"
                    >
                      <Sidebar
                        animation="overlay"
                        className="sidebar-search"
                        direction="right"
                        icon="labeled"
                        inverted="true"
                        onShow={[Function]}
                        target={
                          Object {
                            "current": Document {
                              "location": Location {
                                "assign": [Function],
                                "hash": "",
                                "host": "localhost",
                                "hostname": "localhost",
                                "href": "http://localhost/",
                                "origin": "http://localhost",
                                "pathname": "/",
                                "port": "",
                                "protocol": "http:",
                                "reload": [Function],
                                "replace": [Function],
                                "search": "",
                                "toString": [Function],
                              },
                            },
                          }
                        }
                        vertical="true"
                        visible={false}
                        width="very wide"
                      >
                        <Ref
                          innerRef={
                            Object {
                              "current": <div
                                class="ui overlay right very wide sidebar sidebar-search"
                                icon="labeled"
                                inverted="true"
                                vertical="true"
                              >
                                <form
                                  class="ui inverted form"
                                >
                                  <div
                                    class="field"
                                  >
                                    <label>
                                      SEARCH
                                    </label>
                                    <input
                                      aria-label="search-input"
                                      placeholder="track, artist or album"
                                      value=""
                                    />
                                  </div>
                                  <button
                                    class="ui fluid button"
                                    type="submit"
                                  >
                                    Find
                                  </button>
                                </form>
                                <div
                                  class="ui horizontal divider"
                                >
                                  <h4
                                    class="ui inverted header"
                                  >
                                    Results
                                  </h4>
                                </div>
                                <div
                                  class="ui tiny divided inverted relaxed list"
                                  role="list"
                                />
                              </div>,
                            }
                          }
                        >
                          <RefFindNode
                            innerRef={
                              Object {
                                "current": <div
                                  class="ui overlay right very wide sidebar sidebar-search"
                                  icon="labeled"
                                  inverted="true"
                                  vertical="true"
                                >
                                  <form
                                    class="ui inverted form"
                                  >
                                    <div
                                      class="field"
                                    >
                                      <label>
                                        SEARCH
                                      </label>
                                      <input
                                        aria-label="search-input"
                                        placeholder="track, artist or album"
                                        value=""
                                      />
                                    </div>
                                    <button
                                      class="ui fluid button"
                                      type="submit"
                                    >
                                      Find
                                    </button>
                                  </form>
                                  <div
                                    class="ui horizontal divider"
                                  >
                                    <h4
                                      class="ui inverted header"
                                    >
                                      Results
                                    </h4>
                                  </div>
                                  <div
                                    class="ui tiny divided inverted relaxed list"
                                    role="list"
                                  />
                                </div>,
                              }
                            }
                          >
                            <div
                              className="ui overlay right very wide sidebar sidebar-search"
                              icon="labeled"
                              inverted="true"
                              vertical="true"
                            >
                              <YourMix
                                onAddTracks={[Function]}
                                onRemoveFromMix={[Function]}
                                onSwapTracks={[Function]}
                                tracks={Array []}
                              />
                              <Form
                                as="form"
                                inverted={true}
                                onSubmit={[Function]}
                              >
                                <form
                                  className="ui inverted form"
                                  onSubmit={[Function]}
                                >
                                  <FormField>
                                    <div
                                      className="field"
                                    >
                                      <label>
                                        SEARCH
                                      </label>
                                      <input
                                        aria-label="search-input"
                                        onChange={[Function]}
                                        placeholder="track, artist or album"
                                      />
                                    </div>
                                  </FormField>
                                  <Button
                                    as="button"
                                    fluid={true}
                                    type="submit"
                                  >
                                    <Ref
                                      innerRef={
                                        Object {
                                          "current": <button
                                            class="ui fluid button"
                                            type="submit"
                                          >
                                            Find
                                          </button>,
                                        }
                                      }
                                    >
                                      <RefFindNode
                                        innerRef={
                                          Object {
                                            "current": <button
                                              class="ui fluid button"
                                              type="submit"
                                            >
                                              Find
                                            </button>,
                                          }
                                        }
                                      >
                                        <button
                                          className="ui fluid button"
                                          onClick={[Function]}
                                          type="submit"
                                        >
                                          Find
                                        </button>
                                      </RefFindNode>
                                    </Ref>
                                  </Button>
                                </form>
                              </Form>
                              <Divider
                                horizontal={true}
                              >
                                <div
                                  className="ui horizontal divider"
                                >
                                  <Header
                                    as="h4"
                                    inverted={true}
                                  >
                                    <h4
                                      className="ui inverted header"
                                    >
                                      Results
                                    </h4>
                                  </Header>
                                </div>
                              </Divider>
                              <List
                                divided={true}
                                inverted={true}
                                relaxed={true}
                                size="tiny"
                              >
                                <div
                                  className="ui tiny divided inverted relaxed list"
                                  role="list"
                                >
                                  <SearchItems
                                    onAdd={[Function]}
                                    onClick={[Function]}
                                    tracks={Array []}
                                  />
                                </div>
                              </List>
                            </div>
                          </RefFindNode>
                        </Ref>
                      </Sidebar>
                      <SidebarPusher
                        dimmed={false}
                        onClick={null}
                      >
                        <div
                          className="pusher"
                          onClick={null}
                        >
                          <div
                            className="c-header"
                          >
                            <Controls
                              disabled={true}
                              onNext={[Function]}
                              onPause={[Function]}
                              onPlay={[Function]}
                              onPrevious={[Function]}
                              onStop={[Function]}
                            >
                              <span
                                className="c-controls"
                              >
                                <SkipButtons
                                  disabled={true}
                                  onNext={[Function]}
                                  onPrevious={[Function]}
                                >
                                  <PreviousButton
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="step backward"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="step backward icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </PreviousButton>
                                  <NextButton
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="step forward"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="step forward icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </NextButton>
                                </SkipButtons>
                                <PlayButton
                                  disabled={true}
                                  onClick={[Function]}
                                  state="playing"
                                >
                                  <button
                                    className="c-button c-button--disabled c-button--active"
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <Icon
                                      as="i"
                                      name="play"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="play icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </button>
                                </PlayButton>
                                <PauseButton
                                  disabled={true}
                                  onClick={[Function]}
                                  state="playing"
                                >
                                  <button
                                    className="c-button c-button--disabled"
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <Icon
                                      as="i"
                                      name="pause"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="pause icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </button>
                                </PauseButton>
                                <StopButton
                                  disabled={true}
                                  onClick={[Function]}
                                  state="playing"
                                >
                                  <button
                                    className="c-button c-button--disabled"
                                    disabled={true}
                                    onClick={[Function]}
                                  >
                                    <Icon
                                      as="i"
                                      name="stop"
                                    >
                                      <i
                                        aria-hidden="true"
                                        className="stop icon"
                                        onClick={[Function]}
                                      />
                                    </Icon>
                                  </button>
                                </StopButton>
                              </span>
                            </Controls>
                            <div
                              className="c-header__actions"
                            >
                              <SearchButton
                                disabled={true}
                                onClick={[Function]}
                              >
                                <Button
                                  animated="vertical"
                                  as="button"
                                  disabled={true}
                                  floated="right"
                                  onClick={[Function]}
                                >
                                  <Ref
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui vertical animated disabled right floated button"
                                          disabled=""
                                          tabindex="-1"
                                        >
                                          <div
                                            class="hidden content"
                                          >
                                            Search
                                          </div>
                                          <div
                                            class="visible content"
                                          >
                                            <i
                                              aria-hidden="true"
                                              class="search icon"
                                            />
                                          </div>
                                        </button>,
                                      }
                                    }
                                  >
                                    <RefFindNode
                                      innerRef={
                                        Object {
                                          "current": <button
                                            class="ui vertical animated disabled right floated button"
                                            disabled=""
                                            tabindex="-1"
                                          >
                                            <div
                                              class="hidden content"
                                            >
                                              Search
                                            </div>
                                            <div
                                              class="visible content"
                                            >
                                              <i
                                                aria-hidden="true"
                                                class="search icon"
                                              />
                                            </div>
                                          </button>,
                                        }
                                      }
                                    >
                                      <button
                                        className="ui vertical animated disabled right floated button"
                                        disabled={true}
                                        onClick={[Function]}
                                        tabIndex={-1}
                                      >
                                        <ButtonContent
                                          hidden={true}
                                        >
                                          <div
                                            className="hidden content"
                                          >
                                            Search
                                          </div>
                                        </ButtonContent>
                                        <ButtonContent
                                          visible={true}
                                        >
                                          <div
                                            className="visible content"
                                          >
                                            <Icon
                                              as="i"
                                              name="search"
                                            >
                                              <i
                                                aria-hidden="true"
                                                className="search icon"
                                                onClick={[Function]}
                                              />
                                            </Icon>
                                          </div>
                                        </ButtonContent>
                                      </button>
                                    </RefFindNode>
                                  </Ref>
                                </Button>
                              </SearchButton>
                              <VolumeButtons
                                disabled={true}
                                onVolumeChange={[Function]}
                              >
                                <div
                                  className="c-volumeControls"
                                >
                                  <VolumeDownButton
                                    disabled={true}
                                    onChange={[Function]}
                                    volume={25}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="volume down"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="volume down icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </VolumeDownButton>
                                  <VolumeUpButton
                                    disabled={true}
                                    onChange={[Function]}
                                    volume={25}
                                  >
                                    <button
                                      className="c-button c-button--disabled"
                                      disabled={true}
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="volume up"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="volume up icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </VolumeUpButton>
                                  <div
                                    className="c-volumeControls__indicator"
                                  >
                                    25
                                  </div>
                                </div>
                              </VolumeButtons>
                              <Settings>
                                <button
                                  className="c-button"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="power off"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="power off icon"
                                      onClick={[Function]}
                                    />
                                  </Icon>
                                </button>
                              </Settings>
                            </div>
                          </div>
                          <div
                            className="c-main"
                          >
                            <div
                              className="c-main__nowPlaying"
                            >
                              <CurrentTrackContainer>
                                <CurrentTrack
                                  onVote={[Function]}
                                  userID={null}
                                >
                                  <div
                                    className="c-nowPlaying"
                                  >
                                    <div>
                                      <img
                                        alt="Kyan Limited Edition Collectors Vinyl"
                                        className="c-nowPlaying__image"
                                        src="default-artwork.png"
                                      />
                                      <div
                                        className="c-nowPlaying__trackInfo"
                                      >
                                        <h6>
                                          Now playing
                                        </h6>
                                        <h4>
                                          -
                                        </h4>
                                        <p>
                                          Drag some music here or press play.
                                        </p>
                                      </div>
                                    </div>
                                  </div>
                                </CurrentTrack>
                              </CurrentTrackContainer>
                            </div>
                            <div
                              className="c-main__trackList"
                            >
                              <h6>
                                Tracklist 
                                <ClearPlaylist
                                  disabled={true}
                                  onClear={[Function]}
                                />
                              </h6>
                              <Tracklist
                                disabled={true}
                                onArtistSearch={[Function]}
                                onRemoveTrack={[Function]}
                                tracks={Array []}
                              >
                                <div
                                  className="c-tracklist"
                                >
                                  <ListItems
                                    disabled={true}
                                    onArtistSearch={[Function]}
                                    onRemove={[Function]}
                                    tracks={Array []}
                                  />
                                </div>
                              </Tracklist>
                            </div>
                          </div>
                        </div>
                      </SidebarPusher>
                    </div>
                  </SidebarPushable>
                </Search>
              </SearchContainer>
            </DragInTrack>
          </div>
        </DimmerDimmable>
      </Dashboard>
    </DashboardContainer>
  </DragDropContext(DashboardContainer)>
</Provider>
`;
